--- a/package.xml
+++ b/package.xml
@@ -16,8 +16,8 @@
   <email>damien.bezborodow@valex.com.au</email>
   <active>yes</active>
  </lead>
- <date>2009-03-16</date>
- <time>03:25:46</time>
+ <date>2009-03-19</date>
+ <time>06:08:33</time>
  <version>
   <release>0.2.0</release>
   <api>0.2.0</api>
@@ -29,18 +29,22 @@
  <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD Style</license>
  <notes>Refactored code to use class constants instead of define()
 More validation / exceptions raised if you don&apos;t setPayment()
-Fixed CVV validation unit test coverage</notes>
+Fixed CVV validation unit test coverage
+Improved factory methods
+Implemented Payment_Process2_Type::validate()
+Removed Payment_Process2_Type::isValid()
+Some properties now public/protected</notes>
  <contents>
   <dir baseinstalldir="/" name="/">
-   <file baseinstalldir="/" md5sum="14bed090a78a554e4d4857a9c55bd135" name="examples/creditcard.php" role="doc" />
+   <file baseinstalldir="/" md5sum="f237ba19dfcaa775b39a92ac7ab74ce6" name="examples/creditcard.php" role="doc" />
    <file baseinstalldir="/" md5sum="be6b97873d98b2c954aefe4fafa64d74" name="examples/echeck.php" role="doc" />
    <file baseinstalldir="/" md5sum="aa9ed76095ed6149f51b3118d6ecea12" name="examples/linkpoint.php" role="doc" />
    <file baseinstalldir="/" md5sum="ceba22b7cec3787483a1804b586c6f5b" name="examples/Payment_Process-example.php" role="doc" />
    <file baseinstalldir="/" md5sum="36f610bc67b7b3050c65027ff9c73c0b" name="examples/TrustCommerce_creditcard.php" role="doc" />
-   <file baseinstalldir="/" md5sum="30ef0b2f438dd19d61837148b6673030" name="Payment/Process2.php" role="php" />
+   <file baseinstalldir="/" md5sum="bac5cd080c7eff19711e4caa0616704c" name="Payment/Process2.php" role="php" />
    <file baseinstalldir="/" md5sum="8bafde49eda40b7fa4ac442da717cb89" name="Payment/Process2/AuthorizeNet.php" role="php" />
    <file baseinstalldir="/" md5sum="59866009105422f9e911c27f04fa4945" name="Payment/Process2/Bibit.php" role="php" />
-   <file baseinstalldir="/" md5sum="0924fff080455dede145bb2cc79fd046" name="Payment/Process2/Common.php" role="php" />
+   <file baseinstalldir="/" md5sum="64dfeb8d1177a120ec3f64ee9483f288" name="Payment/Process2/Common.php" role="php" />
    <file baseinstalldir="/" md5sum="cd6e027f25bacdeb1783baa3fdfff195" name="Payment/Process2/Driver.php" role="php" />
    <file baseinstalldir="/" md5sum="c3373d6b6e647eb707c0073a5f0d5833" name="Payment/Process2/Dummy.php" role="php" />
    <file baseinstalldir="/" md5sum="f6cfeea2e97e449a1e2eb320609d35cf" name="Payment/Process2/Exception.php" role="php" />
@@ -50,7 +54,7 @@ Fixed CVV validation unit test coverage</notes>
    <file baseinstalldir="/" md5sum="8772a8f4b6c2534d1837b3114931a95d" name="Payment/Process2/Result.php" role="php" />
    <file baseinstalldir="/" md5sum="9ff35206cd3907169cad7b3b19e87e6f" name="Payment/Process2/Transfirst.php" role="php" />
    <file baseinstalldir="/" md5sum="e76918536a2f289c36f3137cf78369d0" name="Payment/Process2/TrustCommerce.php" role="php" />
-   <file baseinstalldir="/" md5sum="3cfb0accd7066ca543ed5f7b0b782895" name="Payment/Process2/Type.php" role="php" />
+   <file baseinstalldir="/" md5sum="9688639ec84a417f32722cb3fc879e77" name="Payment/Process2/Type.php" role="php" />
    <file baseinstalldir="/" md5sum="4e23abaf1c3cb64988dd390bb37f35f7" name="Payment/Process2/Result/AuthorizeNet.php" role="php" />
    <file baseinstalldir="/" md5sum="5f5df9ad8ec83e3ad6aec6ca96293517" name="Payment/Process2/Result/Bibit.php" role="php" />
    <file baseinstalldir="/" md5sum="4dc2321cb2d59adcaa369f01b3a93cf9" name="Payment/Process2/Result/Driver.php" role="php" />
@@ -61,27 +65,27 @@ Fixed CVV validation unit test coverage</notes>
    <file baseinstalldir="/" md5sum="895d048003471aa61a4a2b338f7338ca" name="Payment/Process2/Result/TrustCommerce.php" role="php" />
    <file baseinstalldir="/" md5sum="2f6b6b6740d4475156955aebdcccaa8f" name="Payment/Process2/Type/CreditCard.php" role="php" />
    <file baseinstalldir="/" md5sum="010a70be2553c169f0b6fde87c8b704e" name="Payment/Process2/Type/eCheck.php" role="php" />
-   <file baseinstalldir="/" md5sum="47eda165f4bed25cb78e09488d5889c5" name="tests/AllTests.php" role="test" />
+   <file baseinstalldir="/" md5sum="1e547a2dba4de47607e7033f008767f5" name="tests/AllTests.php" role="test" />
    <file baseinstalldir="/" md5sum="ae441a8703f8530064954901eefd05d9" name="tests/Payment_Process2Test.php" role="test" />
    <file baseinstalldir="/" md5sum="91c5e635331a893108464f0d895e3894" name="tests/Payment_Process2_AuthorizeNetTest.php" role="test" />
    <file baseinstalldir="/" md5sum="f5750034788b6200b646671d552e8afb" name="tests/Payment_Process2_BibitTest.php" role="test" />
    <file baseinstalldir="/" md5sum="2540c3b6a549dca15b3ec11df3dd2bf6" name="tests/Payment_Process2_CommonTest.php" role="test" />
    <file baseinstalldir="/" md5sum="07296ae08b04ea77b54458cdb846af31" name="tests/Payment_Process2_DummyTest.php" role="test" />
    <file baseinstalldir="/" md5sum="c70e33c7e56377873332336267f31d1c" name="tests/Payment_Process2_LinkPointTest.php" role="test" />
-   <file baseinstalldir="/" md5sum="aff1c7afb2fe570ed5937aeda3ef73e2" name="tests/Payment_Process2_PaypalTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="dd12c31d5b900f5b15b217c20d43d2ff" name="tests/Payment_Process2_PayPalTest.php" role="test" />
    <file baseinstalldir="/" md5sum="b7d915a3634415bd79e98e9eba12029a" name="tests/Payment_Process2_ResultTest.php" role="test" />
    <file baseinstalldir="/" md5sum="ff91ae4063eac77008fc2b97ac4b49fd" name="tests/Payment_Process2_Result_AuthorizeNetTest.php" role="test" />
    <file baseinstalldir="/" md5sum="8adb2627bc3f803a655d198e4c1a2344" name="tests/Payment_Process2_Result_BibitTest.php" role="test" />
    <file baseinstalldir="/" md5sum="7e45fb240c8a649560757989a3bad83f" name="tests/Payment_Process2_Result_DummyTest.php" role="test" />
    <file baseinstalldir="/" md5sum="2e9110bcb11b2efd8691baeb30ebfe50" name="tests/Payment_Process2_Result_LinkPointTest.php" role="test" />
-   <file baseinstalldir="/" md5sum="5667413f0154e85e9af2e98da61b5d12" name="tests/Payment_Process2_Result_PaypalTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="0078403f9279bea8d446e937a713a4ea" name="tests/Payment_Process2_Result_PayPalTest.php" role="test" />
    <file baseinstalldir="/" md5sum="909560169d5882e37d6fb00d0767a554" name="tests/Payment_Process2_Result_TransfirstTest.php" role="test" />
    <file baseinstalldir="/" md5sum="3d4a90eca8e8ec44dd54cde2d5f26b0d" name="tests/Payment_Process2_Result_TrustCommerceTest.php" role="test" />
    <file baseinstalldir="/" md5sum="e9906f1a142d50b31bb8cd76841003c5" name="tests/Payment_Process2_TransfirstTest.php" role="test" />
    <file baseinstalldir="/" md5sum="ec8490c1a87ecf136f59283b6dd9dcd9" name="tests/Payment_Process2_TrustCommerceTest.php" role="test" />
-   <file baseinstalldir="/" md5sum="a675fbe4200d7ba42df836f55839cbc7" name="tests/Payment_Process2_TypeTest.php" role="test" />
-   <file baseinstalldir="/" md5sum="d6e6b4f03d9d7a209c4dae2857bc4a8a" name="tests/Payment_Process2_Type_CreditCardTest.php" role="test" />
-   <file baseinstalldir="/" md5sum="c45a40492a5257fe41dc2f5f452cb53b" name="tests/Payment_Process2_Type_eCheckTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="d53978baff13924e5c408ab732387f24" name="tests/Payment_Process2_TypeTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="79eea285896d4a9ae76e3f8eae0837e1" name="tests/Payment_Process2_Type_CreditCardTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="4186b4a6c0e009893d4a75fceff94f7f" name="tests/Payment_Process2_Type_eCheckTest.php" role="test" />
    <file baseinstalldir="/" md5sum="5a85f51d17d09ee803aa1251ad4d4b8a" name="tests/data/AuthorizeNet/error.html" role="test" />
    <file baseinstalldir="/" md5sum="2187b7d9f904702536875161fb7f5f9c" name="tests/data/TrustCommerce/error.html" role="test" />
    <file baseinstalldir="/" md5sum="ecdc420841b38bcd74f393a19682d299" name="tests/data/TrustCommerce/success.html" role="test" />
@@ -136,7 +140,7 @@ Fixed CVV validation unit test coverage</notes>
     <release>alpha</release>
     <api>alpha</api>
    </stability>
-   <date>2009-03-16</date>
+   <date>2009-03-19</date>
    <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD Style</license>
    <notes>Refactored code to use class constants instead of define()
 More validation / exceptions raised if you don&apos;t setPayment()
